project2/test/test_11712639_04.spl
int compare(int x, int y)
{
  if (x > y) {return 1;}
  else if (y > x) {return -1;}
  else {return 0;}
}
float compare(int a, int b)
{
  if (b > a) {return 1;}
  if (b == a) {return 0.0;}
  return 'c';
}